<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/front_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:adjustViewBounds="true"
            android:paddingTop="16dp"
            android:contentDescription="@string/front_image" />
        <TextView
            android:id="@+id/mrz"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="MRZ"
            android:paddingTop="10dp"
            android:textStyle="bold"
            android:fontFamily="monospace"
            android:paddingBottom="16dp"/>
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/names">
                </TextView>
                <TextView
                    android:id="@+id/names"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/given_names"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/surname">
                </TextView>
                <TextView
                    android:id="@+id/surname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/given_surname"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_of_birth">
                </TextView>
                <TextView
                    android:id="@+id/dob"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_date"/>
            </TableRow>
        </TableLayout>
        <Button
            android:id="@+id/button_new_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_scan"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp" />

        <Button
            android:id="@+id/button_security_features"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/run_security_features_check"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp" />

        <Button
            android:id="@+id/button_nfc_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nfc_scan"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp" />

        <Button
            android:id="@+id/button_viz_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visual_information_zone_check"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp" />
    </LinearLayout>
</ScrollView>