<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
android:paddingLeft="16dp"
android:paddingRight="16dp">

<TableLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passed_all" />

        <TextView
            android:id="@+id/passed_all"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/viz_not_checked"/>
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passed_photo" />

        <TextView
            android:id="@+id/passed_photo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/viz_not_checked"/>
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passed_date_of_birth" />

        <TextView
            android:id="@+id/passed_date_of_birth"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/viz_not_checked"/>
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passed_date_of_expiry" />

        <TextView
            android:id="@+id/passed_date_of_expiry"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/viz_not_checked"/>
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passed_sex" />

        <TextView
            android:id="@+id/passed_sex"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/viz_not_checked"/>
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passed_issuing_country" />

        <TextView
            android:id="@+id/passed_issuing_country"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/viz_not_checked"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passed_surname" />

        <TextView
            android:id="@+id/passed_surname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/viz_not_checked"/>

    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passed_given_name" />

        <TextView
            android:id="@+id/passed_given_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/viz_not_checked"/>
    </TableRow>


</TableLayout>

</LinearLayout>