<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:id="@+id/nfc_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:adjustViewBounds="true"
            android:paddingTop="16dp" />

        <TextView
            android:id="@+id/nfc_mrz"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:paddingBottom="16dp"
            android:paddingTop="10dp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mrz_match" />

                <TextView
                    android:id="@+id/nfc_mrz_match"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/com_sod_match" />

                <TextView
                    android:id="@+id/nfc_com_sod_match"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bac_status" />

                <TextView
                    android:id="@+id/nfc_bac_status"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/active_authentication_status" />

                <TextView
                    android:id="@+id/nfc_aa_status"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_authentication_status" />

                <TextView
                    android:id="@+id/nfc_ca_status"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/valid_document_signer" />

                <TextView
                    android:id="@+id/nfc_valid_document_signer"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/valid_certificate" />

                <TextView
                    android:id="@+id/nfc_valid_certificate"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/valid_root_certificate" />

                <TextView
                    android:id="@+id/nfc_valid_root_certificate"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_completed" />

                <TextView
                    android:id="@+id/nfc_scan_completed"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </TableRow>


        </TableLayout>
    </LinearLayout>
</ScrollView>